--- a/EJERCICIOS/PaginaDeEnsayo.css
+++ b/EJERCICIOS/PaginaDeEnsayo.css
@@ -3,7 +3,7 @@ body {
     margin: 20px;
     padding: 20px;
     background-image: url("https://restaurante.guide/wp-content/uploads/2019/07/Comida-colombiana-portada.jpg");
-    color: #08f740;
+    color: #fff;
     
 }
 
@@ -53,4 +53,51 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.CAJA1 {
+
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    color: black;
+    font-size: 30px;
+    float: left;
+    
+}
+.CAJA2 {
+
+    background-color: rgb(243, 128, 14);
+    width: 300px;
+    height: 300px;
+    color: black;
+    font-size: 30px;
+    float: left;
+    
+}
+.CAJA3 {
+
+    background-color: rgb(150, 164, 18);
+    width: 300px;
+    height: 300px;
+    color: black;
+    font-size: 30px;
+    float: left;
+    
+}
+.CAJA4 {
+
+    background-color: rgb(188, 23, 89);
+    width: 300px;
+    height: 300px;
+    color: black;
+    font-size: 30px;
+    float: left;
+    
+}
+
+div{
+
+    text-align: center;
+    right: 22px;
 }
