--- a/EJERCICIOS/ejercicio17.css
+++ b/EJERCICIOS/ejercicio17.css
@@ -1,4 +1,112 @@
-body {
+* {
+    box-sizing: border-box;
+}
 
-    color: blue;
+h1 {
+
+    font-size: 3.5em;
+}
+
+h2 {
+    font-size: 2.7em;
+}
+
+h3 {
+    font-size: 2em;
+}
+
+p {
+    font-size: 1.25em;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    font-size: 1.25em;
+}
+
+body {
+    font-family: 'Roboto' sans-serif;
+    margin: 0;
+}
+
+button {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.5);
+    color: white;
+    background-color: blueviolet;
+
+}
+
+button:hover {
+    background-color: rgb(94, 31, 153);
+}
+
+.container {
+    max-width: 1400px;
+    margin: auto;
+}
+
+header {
+
+    background-color: rgb(245, 245, 245);
+
+}
+
+header .logo {
+
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: blueviolet;
+    font-size: 1.6em;
+
+}
+
+header .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header nav {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+header a {
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+
+header a:hover {
+    color: blueviolet;
+}
+
+#hero {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 90vh;
+    color: white;
+   background-color: linear-gradient(
+0deg,s
+rgba(0,0,0,0.5),
+rgba(0,0,0,0.5)
+
+   )
+   ,url("https://llerosadreams.es/wp-content/uploads/2020/04/lenguajes-programacion.png")
 }
